--- a/Readme
+++ b/Readme
@@ -1,5 +1,6 @@
-SampleCSC396
-Team Mbers
-Project Ptch
-Front End
-Back End
+# SampleCSC396
+# Team Members
+# Project Pitch
+# Front End
+# Back End
+# Functional
